k3s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
          role: backend
      containers:
      - name: backend
        image: pdubnyakov/morph-backend:v1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
